--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JA JA</title>
-    <link rel="stylesheet" href="estilo.css"> 
+    <link rel="stylesheet" href="css/estilo.css"> 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -12,13 +12,14 @@
 <body>
     <div id="inicio" class="row">
         <h1 class="row">UNA RISITA Y A SEGUIR</h2>
-        <img class="row" src="roos.jpg" class="banner img-fluid rounded">
+        <img class="row" src="img/roos.jpg" class="banner img-fluid rounded">
         <button class="row" id="generador" class="btn btn-primary">GENERAR CHISTE!</button>
     </div>
     <div class="row" id="contenedor"></div>
 
+<script src="js/app.js"></script>
+<script src="js/script.js"></script>
 
-<script src="script.js"></script>
 
 
 </body>
