--- a/crearUsuario.html
+++ b/crearUsuario.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <form>
-        <div class="container align-self-center">
+            <div class="container align-self-center">
+            <label for="nombre" class="form-label" >Nombre</label>
+             <input type="texto" class="form-control" id="nombre" required>
+             </div>
+            <div class="container align-self-center">
             <label for="usuario" class="form-label" >Usuario</label>
              <input type="email" class="form-control" id="usuario" required>
              </div>
@@ -15,12 +19,10 @@
               <label for="password1" class="form-label">Contraseña</label>
               <input type="password" class="form-control" id="password1">
              </div>
-             <div id="ingresar" class="container">
-              <button class="btn" type="button" id="ingresoBtn">Ingresar</button>
-             </div>
              <div id="crear" class="container">
                 <button class="btn" type="button" id="crearBtn">Crear usuario</button>
             </div>
     </form>
+    <script src="js/crearUsuario.js"></script>
 </body>
 </html>
